test[RED]: add user role access test for report